vt(4): Don't recalculate buffer size if we don't know screen size

(MFC of r272537)

When the screen size is unknown, it's set to 0x0. We can't use that as
the buffer size, otherwise, functions such as vtbuf_fill() will fail.

This fixes a panic on RaspberryPi, where there's no vt(4) backend
configured early in boot.

PR:		193981
Tested by:	danilo@

Former-commit-id: 6b882d131ad2a767345ed9e0dfc7277b62d5dd2e